lab3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: itdt-contained-frontend-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: 3000
      port: 3000
      nodePort: 30300
      protocol: TCP
  selector:
    app: itdt-contained-frontend
