lab3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itdt-contained-frontend-ingress
  labels:
    name: itdt-contained-frontend-ingress
spec:
  rules:
    - host: mikhail-larionov.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itdt-contained-frontend-service
                port:
                  number: 3000
  tls:
    - hosts:
        - mikhail-larionov.ru
      secretName: mikhail-tls
